--- a/html/admin/adminNoJs.html
+++ b/html/admin/adminNoJs.html
@@ -4,13 +4,12 @@
 <head>
   <title>Dashboard amministratore - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
   <meta name="title" content="Dashboard amministratore - Ippodromo NO₂¯" />
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
-  <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css"
+    media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
 </head>
 
 <body>
@@ -49,7 +48,7 @@
           </dt>
           <dd>
             <p><num-gare /></p>
-            <p><a href="../../php/admin/aggiungiGara.php">Crea nuove gare</a></p>
+            <p><a href="../../php/admin/aggiungiGaraNoJs.php">Crea nuove gare</a></p>
           </dd>
           <dt>
             <h2>Risultati</h2>
