--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -3,6 +3,10 @@
 
 <head>
   <title>Dashboard amministratore - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
+  <noscript>
+    <style>html{display:none;}</style>
+    <meta http-equiv="refresh" content="0.0;url=../../php/admin/adminNoJs.php">
+  </noscript>
   <meta name="title" content="Dashboard amministratore - Ippodromo NO₂¯" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
