--- a/html/admin/gestisciCavalli.html
+++ b/html/admin/gestisciCavalli.html
@@ -33,7 +33,9 @@
       </ul>
     </div>
     <main>
+      
       <a href="../admin/aggiungiCavallo.php">Inserisci un nuovo cavallo</a>
+      <risultato-eliminazione />
       <!-- volendo si puó nascondere/visualizzare con js invece che cambiare pagina -->
       <table>
         <thead>
