--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -38,23 +38,23 @@
     </div>
 
     <main>
-      <form method="post" name="Form" action="login.php">
-        <h1>Login</h1>
-        <input type="text" id="username" placeholder="Username" name="username" required>
-        <input type="password" id="password" placeholder="Password" name="password" required>
-        <button type="submit" name="login">Accedi</button>
+      <form method="post" name="Form" action="login.php" aria-labelledby="form-header">
+        <h2 id="form-header">Login</h2>
+        <label for="username"><span>Username</span></label>
+        <input type="text" id="username" placeholder="swag.barca69" name="username" aria-label="Username" required="required">
+        <label for="password"><span>Password</span></label>
+        <input type="password" id="password" placeholder="Password" name="password" aria-label="Password" required="required">
+        <span>
+          <input type="submit" name="login" value="Accedi">
+        </span>
       </form>
-      <p><a href="../../"> Torna Indietro </a></p>
     </main>
     
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
       <div id="copyright">
         <p>
-          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le
-          vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro.
-          L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte
-          dell'utente; al contrario, si prende con gioia tutto il capitale.
+          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
         </p>
         <div id="authors">
           <p>Quelli che si pigliano i tuoi soldi:</p>
