--- a/html/index.html
+++ b/html/index.html
@@ -56,11 +56,11 @@
               Grazie all'internet, possiamo fare ancora più soldi! Registrati sul nostro sito per avere la possibilità di poter scommettere anche da casa sulle gare del nostro ippodromo.
           </p>
         </dd>
-        <dt>Valuta virtuale: Cookies</dt>
+        <dt>Valuta virtuale: Bitscuits</dt>
         <dd>
           <img src="images/bitsquit.png" class="imgContent center-element" alt="Un bisotto in 8 bit, simbolo della valuta" />
           <p>
-            Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di cookies gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!
+            Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di bitscuits gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!
           </p>
         </dd>
       </dl>
