--- a/html/scommesse/scommesseUtente.html
+++ b/html/scommesse/scommesseUtente.html
@@ -22,7 +22,7 @@
     <div class="navbar">
 
       <nav id="menu">
-        <ul>
+        <ul aria-label="Menù principale">
           <li lang="en"><a href="../../">Home</a></li>
           <li><a href='scommetti.php'>Scommesse</a></li>
           <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
