Indentazione + dare credito a vittoria gara
Indentazione + dare credito a vittoria gara

--- a/html/scommesse/garaScommessa.html
+++ b/html/scommesse/garaScommessa.html
@@ -11,54 +11,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
-
-  <script type="text/javascript">
-      function checkDoc(userBitSquits)
-      {
-        if(checkBitSquits(userBitSquits) && checkRadio())
-        {
-          return true;
-        }
-        else {
-          return false;
-        }
-      }
-      
-      function checkBitSquits(userBitSquits)
-      {
-        var n = document.getElementsByTagName('input');
-        var value;
-        for (var i = 0; i < n.length; i++) {
-          if (n[i].type === 'number')
-          {
-            if(n[i].value <= userBitSquits)
-            return true;
-            else
-            {
-              alert('Non hai abbastanza bitSquits :(. Si prega di inserire un importo valido');
-              return false;
-            }
-          }
-        }
-        alert('Qualcosa è andato storto :(');
-        return false;
-      }
-      
-            function checkRadio()
-            {
-        var radios = document.getElementsByTagName('input');
-        var value;
-        for (var i = 0; i < radios.length; i++) {
-          if (radios[i].type === 'radio' && radios[i].checked)
-          {
-            return true;
-          }
-        }
-        alert('Non è stato selezionato nessun cavallo su cui scommettere');
-        return false;
-            }
-  </script>
-
+  <script type="text/javascript" src="../../script/controlli.js"></script>
 </head>
 
 <body>
