Aggiunti aiuti alla navigazione nascosti

--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -21,6 +21,7 @@
     <h1><span lang="en">Dashboard</span> amministratore</h1>
   </header>
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
       <nav id="menu">
         <ul>
@@ -37,7 +38,7 @@
       </ul>
     </div>
 
-    <main>
+    <main id="content">
       <nav>
         <!-- questa cosa va mostrata solo se si è loggati, se non lo si è bisogna reindirizzare al login -->
         <dl id="db-cards">
@@ -70,6 +71,7 @@
         </dd>
         </dl>
       </nav>
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
