--- a/html/admin/adminNoJs.html
+++ b/html/admin/adminNoJs.html
@@ -17,6 +17,7 @@
     <h1><span lang="en">Dashboard</span> amministratore</h1>
   </header>
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
       <nav id="menu">
         <ul>
@@ -32,7 +33,7 @@
         <li><span lang="en">Dashboard</span> amministratore</li>
       </ul>
     </div>
-    <main>
+    <main id="content">
       <nav>
         <dl id="db-cards">
           <dt>
@@ -59,6 +60,7 @@
           </dd>
         </dl>
       </nav>
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
