--- a/html/admin/gestisciCavalli.html
+++ b/html/admin/gestisciCavalli.html
@@ -16,6 +16,7 @@
     <h1>Gestisci i cavalli</h1>
   </header>
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
       <nav id="menu">
         <ul>
@@ -32,7 +33,7 @@
         <li>Gestisci i cavalli</li>
       </ul>
     </div>
-    <main>
+    <main id="content">
       
       <a href="../admin/aggiungiCavallo.php">Inserisci un nuovo cavallo</a>
       <risultato-eliminazione />
@@ -49,6 +50,7 @@
           <lista-cavalli />
         </tbody>
       </table>
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
