--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -23,6 +23,7 @@
     <h1>Inserisci risultati gara</h1>
   </header>
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
       <nav id="menu">
         <ul>
@@ -39,10 +40,11 @@
         <li>Inserisci risultati</li>
       </ul>
     </div>
-    <main>
+    <main id="content">
         <risultato-inserimento />
         <lista-gare />
         <inserimento-gara-selezionata />
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
