--- a/html/admin/inserisciRisultatiNoJs.html
+++ b/html/admin/inserisciRisultatiNoJs.html
@@ -19,6 +19,7 @@
     <h1>Inserisci risultati gara</h1>
   </header>
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
       <nav id="menu">
         <ul>
@@ -35,7 +36,7 @@
         <li>Inserisci risultati</li>
       </ul>
     </div>
-    <main>
+    <main id="content">
       <risultato-inserimento />
       <lista-gare />
       <inserimento-gara-selezionata />
