--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -20,6 +20,7 @@
   </header>
 
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
       <nav id="menu">
         <ul>
@@ -39,7 +40,7 @@
       </ul>
     </div>
 
-    <main>
+    <main id="content">
       <form method="post" onsubmit="return validazioneInput()" action="register.php" id="register" aria-labelledby="form-header">
         <h2 id="form-header">Registrazione</h2>
         <label for="username"><span>Username</span></label>
@@ -66,6 +67,7 @@
         <input type="text" id="mail" placeholder="Mail" name="mail" pattern="[a-zA-Z0-9]+[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]{0,}[a-zA-Z0-9]{0,}@[a-zA-Z0-9]{3,}\.[a-zA-Z]{2,3}$" maxlength="50" aria-label="indirizzo email" required>
         <input type="submit" name="register" value="Registrati" />
       </form>
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
