--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -19,6 +19,7 @@
   </header>
 
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
 
       <nav id="menu">
@@ -38,8 +39,9 @@
         <li>Cavalli</li>
       </ul>
     </div>
-    <main>
+    <main id="content">
       <lista-cavalli />
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
