--- a/html/cavalli/cavalloSelezionato.html
+++ b/html/cavalli/cavalloSelezionato.html
@@ -24,6 +24,7 @@
   </header>
 
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
 
       <nav id="menu">
@@ -45,12 +46,13 @@
       </ul>
     </div>
 
-    <main>
+    <main id="content">
       <div class="cards">
         <info-cavallo />
 
         <gare-cavallo />
       </div>
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg".jpeg".jpeg".jpeg".jpeg".jpeg".jpeg".jpeg".jpeg".jpeg".jpeg" alt="Logo Ippodromo NO₂¯" />
