--- a/html/chi_siamo.html
+++ b/html/chi_siamo.html
@@ -18,6 +18,7 @@
     <h1>Chi siamo</h1>
   </header>
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
       <nav id="menu">
         <ul>
@@ -34,7 +35,7 @@
         <li>Chi siamo</li>
       </ul>
     </div>
-  <main>
+  <main id="content">
     
   </main>
   <footer>
