--- a/html/gare/garaSelezionata.html
+++ b/html/gare/garaSelezionata.html
@@ -19,6 +19,7 @@
   </header>
 
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
 
 
@@ -41,13 +42,14 @@
       </ul>
     </div>
 
-    <main>
+    <main id="content">
       <h1 id="h1data">Gara svolta alle: <span><ora /></span> del giorno: <span><giorno /></span></h1>
       <div class="flex-pc">
         <ol>
           <classifica />
         </ol>
       </div>
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
 
     <footer>
