--- a/html/gare/risultati.html
+++ b/html/gare/risultati.html
@@ -20,6 +20,7 @@
   </header>
 
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
 
       <nav id="menu">
@@ -41,10 +42,11 @@
     </div>
 
 
-    <main>
+    <main id="content">
       <div class="cards">
         <lista-gare />
       </div>
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
 
     <footer>
