--- a/html/scommesse/garaScommessa.html
+++ b/html/scommesse/garaScommessa.html
@@ -20,6 +20,7 @@
   </header>
   
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
       
     
@@ -44,7 +45,7 @@
       </div>
     </div>
 
-    <main>
+    <main id="content">
       <credito />
 
       <form />
@@ -73,4 +74,5 @@
   </div>
 </body>
 
-</html>
+</html>      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
+    </main>
