--- a/html/scommesse/scommesse.html
+++ b/html/scommesse/scommesse.html
@@ -19,6 +19,7 @@
   </header>
 
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
 
 
@@ -43,12 +44,13 @@
       </div>
     </div>
 
-    <main>
+    <main id="content">
       <credito />
 
       <storico />
 
       <lista-scommesse />
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
 
     <footer>
