--- a/html/scommesse/scommesseUtente.html
+++ b/html/scommesse/scommesseUtente.html
@@ -19,6 +19,7 @@
   </header>
 
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
 
       <nav id="menu">
@@ -40,12 +41,13 @@
       </ul>
     </div>
 
-    <main>
+    <main id="content">
       
       <credito />
 
       <lista-scommesse-utente />
     
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
 
     <footer>
