--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -22,6 +22,7 @@
     <h1>Aggiungi una gara</h1>
   </header>
   <div class="page">
+    <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
       <nav id="menu">
         <ul>
@@ -38,7 +39,7 @@
         <li>Aggiungi una gara</li>
       </ul>
     </div>
-    <main>
+    <main id="content">
       <form method="post" action="../Admin/caricaGara.php" aria-labelledby="form-header">
         <h2 id="form-header">Inserisci le informazioni della gara</h2>
         <p>In ogni gara corrono almeno 4 cavalli e non più di 8 cavalli</p>
@@ -49,6 +50,7 @@
         <cavalli />
         <input id='submit-button' type="submit" name="register" value="Inserisci la gara" disabled="disabled" />
       </form>
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
