--- a/html/scommesse/garaScommessa.html
+++ b/html/scommesse/garaScommessa.html
@@ -50,6 +50,7 @@
 
       <form />
 
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
 
     <footer>
@@ -74,5 +75,4 @@
   </div>
 </body>
 
-</html>      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
-    </main>
+</html>
