fix style forms

--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -47,8 +47,11 @@
         <input type="date" id="date" name="date" aria-label="Data gara (giorno/mese/anno)" required="required">
         <label for="time"><span>Orario gara (HH/MM)</span></label>
         <input type="time" id="time" name="time" min="08:00:00" max="22:00:00" aria-label="Orario gara (ore/minuti)" required="required">
+        
         <cavalli />
-        <input id='submit-button' type="submit" name="register" value="Inserisci la gara" disabled="disabled" />
+        <span>
+          <input id='submit-button' type="submit" name="register" value="Inserisci la gara" disabled="disabled" />
+        </span>
       </form>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
