--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -42,7 +42,7 @@
       <form method="post" name="Form" action="login.php" aria-labelledby="form-header">
         <h2 id="form-header">Login</h2>
         <label for="username"><span>Username</span></label>
-        <input type="text" id="username" placeholder="swag.barca69" name="username" aria-label="Username" required="required">
+        <input type="text" id="username" placeholder="Username" name="username" aria-label="Username" required="required">
         <label for="password"><span>Password</span></label>
         <input type="password" id="password" placeholder="Password" name="password" aria-label="Password" required="required">
         <span>
