--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -40,15 +40,18 @@
       </ul>
     </div>
     <main id="content">
-      <form method="post" action="../Admin/caricaGara.php" aria-labelledby="form-header">
+      <risultati-inserimento />
+      <form method="post" action="aggiungiGara.php" aria-labelledby="form-header">
         <h2 id="form-header">Inserisci le informazioni della gara</h2>
         <p>In ogni gara corrono almeno 4 cavalli e non più di 8 cavalli</p>
         <label for="date"><span>Data gara (GG/MM/AAAA)</span></label>
         <input type="date" id="date" name="date" aria-label="Data gara (giorno/mese/anno)" required="required">
         <label for="time"><span>Orario gara (HH/MM)</span></label>
         <input type="time" id="time" name="time" min="08:00:00" max="22:00:00" aria-label="Orario gara (ore/minuti)" required="required">
-        
-        <cavalli />
+        <fieldset id="horses">
+          <legend>Cavalli:</legend>
+          <cavalli />
+        </fieldset>
         <span>
           <input id='submit-button' type="submit" name="register" value="Inserisci la gara" disabled="disabled" />
         </span>
