FixNoJs for Inserimento Gara

--- a/html/admin/aggiungiGaraNoJs.html
+++ b/html/admin/aggiungiGaraNoJs.html
@@ -49,7 +49,7 @@
           <cavalli />
         </fieldset>
         <span>
-          <input id='submit-button' type="submit" name="register" value="Inserisci la gara" disabled="disabled" />
+          <input id='submit-button' type="submit" name="register" value="Inserisci la gara" />
         </span>
       </form>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
