Aggiunti link scommesse in pannello admin, migliorati messaggi di errore
Cambiati id dei form

--- a/html/admin/adminNoJs.html
+++ b/html/admin/adminNoJs.html
@@ -22,6 +22,7 @@
       <nav id="menu">
         <ul>
           <li lang="en">Dashboard</li>
+          <li><a href='../../php/Scommetti/scommetti.php'>Scommesse</a></li>
           <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
