--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -21,6 +21,7 @@
       <nav id="menu">
         <ul>
           <li lang="en"><a href="admin.php">Dashboard</a></li>
+          <li><a href='../../php/Scommetti/scommetti.php'>Scommesse</a></li>
           <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
