--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
 </head>
 
