--- a/html/scommesse/garaScommessa.html
+++ b/html/scommesse/garaScommessa.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
   <script type="text/javascript" src="../../script/controlli.js"></script>
+  <script type="text/javascript" src="../../script/scommesse.js"></script>
 </head>
 
 <body>
